# wang_zhenyu_prompt_eval_and_risk-project

Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/: .coveragerc  .env.example  .gitignore  .vercelignore  CLAUDE.md  README.md  mise.toml  next.config.js  package.json  package.json.md  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts  tsconfig.json
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/api/: index.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/app/: globals.css  layout.tsx
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/app/(marketing)/: HomePageContent.tsx  loading.tsx  page.tsx
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/app/chat/: layout.tsx  loading.tsx
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/components/chat/: chat.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  overview.tsx
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/data/: suggested-actions.json
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/data/database-exploration/: database-schema.txt
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/docs/dataset/: database-table-walkthrough-CN.md  database-table-walkthrough.md  smb_analytics_er_document.md  smb_analytics_sql_queries.md
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/docs/dev-guide/: 01-overview-CN.md  02-backend-walkthrough-CN.md  03-frontend-walkthrough-CN.md  04-faq-CN.md  05-codebase-walkthrough-CN.md  06-python-dependencies-CN.md  07-configuration-management-CN.md  08-database-schema-extraction-CN.md  10-database-sync-CN.md  11-agent-prompt-and-tools-CN.md  12-testing-agent-locally-CN.md  13-frontend-agent-integration-CN.md
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/: agent_debugger.py  ai_sdk_adapter.py  api.py  constants.py  paths.py  quota.py  sql_utils.py  utils.py  write_operations.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/config/: conf_00_def.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/db_schema/: api.py  encoder.py  extractor.py  model.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/one/: api.py  one_00_main.py  one_01_config.py  one_02_db.py  one_03_boto3.py  one_04_agent.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/prompts/: bi-agent-system-prompt.md
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/labor_ward_ai/tests/: __init__.py  db_helper.py  db_sync.py  helper.py
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/lib/: constants.ts
Downloads/wang_zhenyu_hospital_maternity_operation_agent-project-main/tests_python/: all.py  test_utils.py  test_write_operations.py
(+67 files in other folders)
